--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -24,7 +24,7 @@
   --white: #fff;
   --gray: #858796;
   --gray-dark: #5a5c69;
-  --primary: #4e73df;
+  --primary: #6b3ceb;
   --secondary: #858796;
   --success: #1cc88a;
   --info: #36b9cc;
@@ -2484,6 +2484,7 @@ textarea.form-control.is-invalid {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+
   background-color: transparent;
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
